# TheScriptGap

./: .gitignore  README.md  TRC- Identifying Underserved Languages.pptx
similarity_research/: README.md  main.py  pyproject.toml  raw_font_metrics.csv  requirements.txt  script_similarity_cnn.py  script_similarity_pipeline.py  similarity_index_results.csv  similarity_index_summary.csv  viz_testing.py
similarity_research/diversity_research/: font_similarity_pipeline.py  networks_visualization.py  script_diversity_classical_cv.py  script_diversity_cnn_100.py  script_diversity_vit_100.py  script_diversity_vit_pipeline.py
similarity_research/diversity_research/classical_cv_outputs/: all_font_pairwise.csv  diversity_classical_results.csv  diversity_classical_summary.csv
similarity_research/diversity_research/classical_cv_outputs/embeddings/: Arabic_classical_features.npy  Arabic_font_names.csv  Arabic_font_pairwise.csv  Bengali_classical_features.npy  Bengali_font_names.csv  Bengali_font_pairwise.csv  Cyrillic_classical_features.npy  Cyrillic_font_names.csv  Cyrillic_font_pairwise.csv  Devanagari_classical_features.npy  (+14 more)
similarity_research/diversity_research/cnn_outputs_100/: diversity_index_results.csv  diversity_index_summary.csv
similarity_research/diversity_research/vit100_outputs/: diversity_index_results.csv  diversity_index_summary.csv
similarity_research/diversity_research/vit_outputs/: diversity_index_results.csv  diversity_index_summary.csv
similarity_research/diversity_research/vit_outputs_100/: diversity_index_results.csv  diversity_index_summary.csv
(+70 files in other folders)
